--- a/.github/workflows/complete-pr-test.yml
+++ b/.github/workflows/complete-pr-test.yml
@@ -14,8 +14,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           version: 15.x
-      - run: git config --global user.email "me@imbhargav5.com"
-      - run: git config --global user.name "Bhargav Ponnapalli"
+      - run: git config user.email "me@imbhargav5.com"
+      - run: git config user.name "Bhargav Ponnapalli"
       - name: Install now
         run: now --version || npm i -g now
       - name: Get yarn cache directory path
