chore(set a git config): set git config

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Node CI
+name: Node CI main
 
 on:
   push:
@@ -24,6 +24,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           version: 15.x
+      - run: git config user.email "me@imbhargav5.com"
+      - run: git config user.name "Bhargav Ponnapalli"
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
