--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,14 @@ jobs:
         run: yarn
       - name: test
         run: yarn test
+      - name: yarn build
+        run: yarn build:only
+      - name: Add npm token
+        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc      
+    #   - name: Create prerelease version
+    #     run: yarn run ga-prerelease-version --preid ${GITHUB_SHA::8}
+      - name: Publish prerelease version
+        run: yarn run ga-npm-publish --dist-tag dev
       - name: Generate docusaurus        
         run: yarn run readme-to-docs
       - name: Build docusaurus        
