chore(use wsrun more instead of lerna): we are deprecating lerna gradually

--- a/package.json
+++ b/package.json
@@ -3,23 +3,22 @@
   "private": true,
   "description": "Useful React hooks for everyone.",
   "scripts": {
-    "clean": "lerna clean",
-    "cleanup": "lerna exec --scope=@rooks/* --concurrency 1 --stream -- rimraf lib dist",
+    "clean": "wsrun  --exclude-missing clean",
+    "cleanup": "wsrun -p '@rooks/*' -s --report --exclude-missing clean rimraf lib dist",
     "commit": "cz",
-    "lint": "lerna run lint --stream --parallel",
+    "lint": "wsrun  --exclude-missing lint",
     "format": "yarn run prettier --write \"./packages/shared/*.+(js|jsx|ts|tsx)\"",
-    "test": "lerna run test --scope shared",
-    "coverage": "lerna run test --stream --parallel -- --coverage",
+    "test": "wsrun --exclude-missing -p 'shared' --report -s test",
+    "coverage": "yarn test --coverage",
     "create": "node helpers/create",
-    "delete-tsconfig": "lerna exec --scope=@rooks/* --concurrency 1 --stream -- rm tsconfig.json",
-    "add-license-to-pkg": "lerna exec --scope=@rooks/* --concurrency 1 --stream -- 'node ../../helpers/add-license-to-pkg.js'",
-    "toggle-pkg-privacy": "lerna exec --scope=@rooks/* --concurrency 1 --stream -- 'node ../../helpers/toggle-pkg-privacy.js'",
+    "delete-tsconfig": "wsrun -p '@rooks/*' -s --report rm tsconfig.json",
+    "add-license-to-pkg": "wsrun -p '@rooks/*' -s --report 'node ../../helpers/add-license-to-pkg.js'",
+    "toggle-pkg-privacy": "wsrun -p '@rooks/*' -s --report 'node ../../helpers/toggle-pkg-privacy.js'",
     "compute-package-list": "node helpers/compute-package-list",
-    "update-title-card": "lerna exec --scope=@rooks/* --concurrency 1 --stream -- 'node ../../helpers/update-title-card/index.js'",
-    "readme-to-docs": "lerna exec --scope=@rooks/* --scope=rooks --concurrency 1 --stream -- 'node ../../helpers/docs/index.js'",
-    "bs": "lerna bootstrap",
-    "build:rooks": "lerna run --scope rooks build",
-    "build:docs": "lerna run --scope docusaurus build",
+    "update-title-card": "wsrun -p '@rooks/*' -s --report 'node ../../helpers/update-title-card/index.js'",
+    "readme-to-docs": "wsrun -p '@rooks/*' -p 'rooks' -s --report 'node ../../helpers/docs/index.js'",
+    "build:rooks": "wsrun -p 'rooks' -s --report build",
+    "build:docs": "wsrun -p 'docusaurus' -s --report build",
     "build:custom-github-actions": "cd ./.github/actions && for d in ./*/ ; do (cd \"$d\" && npm install && npm run build); done",
     "build:only": "yarn run build:rooks",
     "build": "yarn run build:only",
@@ -126,6 +125,7 @@
     "webpack": "4.46.0",
     "webpack-cli": "^4.2.0",
     "write-pkg": "3.2.0",
+    "wsrun": "^5.2.4",
     "yargs": "^16.2.0"
   },
   "workspaces": {
