Revert "chore(build without wsrun): build without wsrun"
This reverts commit ef1658ef31f98b36d810ae8b052ac0a41f7b7746.

--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "compute-package-list": "node helpers/compute-package-list",
     "update-title-card": "wsrun -p '@rooks/*' -s --report 'node ../../helpers/update-title-card/index.js'",
     "readme-to-docs": "wsrun -p '@rooks/*' -p 'rooks' -s --report 'node ../../helpers/docs/index.js'",
+    "build:rooks": "wsrun -p 'rooks' -s --report build",
     "build:docs": "wsrun -p 'docusaurus' -s --report build",
     "build:custom-github-actions": "cd ./.github/actions && for d in ./*/ ; do (cd \"$d\" && npm install && npm run build); done",
-    "build:only": "cd packages/rooks && yarn build",
+    "build:only": "yarn run build:rooks",
     "build": "yarn run build:only",
     "generate:changelog": "gulp changelog",
     "prerelease-version-bump": "GITHUB_SHA=$(git rev-parse HEAD | cut -c1-8);lerna version prerelease --force-publish=* --preid ${GITHUB_SHA}",
