chore(lerna cleanup): lerna cleanup

--- a/packages/rooks/package.json
+++ b/packages/rooks/package.json
@@ -19,7 +19,8 @@
     "prebuild": "yarn clean",
     "generate:types":"tsc --outDir dist/lib --emitDeclarationOnly --declarationDir dist/types --declaration true && rollup -c dts.rollup.config.js && rm -rf dist",
     "build": "node esbuild.mjs && yarn generate:types",
-    "lint": "sh ../../scripts/lint.sh"    
+    "lint": "sh ../../scripts/lint.sh",
+    "release-dev": "np prepatch --preview"
   },
   "bugs": {
     "url": "https://github.com/imbhargav5/rooks/issues"
