--- a/package.json
+++ b/package.json
@@ -23,13 +23,7 @@
     "build:only": "yarn run build:rooks",
     "build": "yarn run build:only",
     "generate:changelog": "gulp changelog",
-    "prerelease-version-bump": "GITHUB_SHA=$(git rev-parse HEAD | cut -c1-8);lerna version prerelease --force-publish=* --preid ${GITHUB_SHA}",
-    "ga-prerelease-version": "lerna version prerelease --force-publish=* --no-commit-hooks --no-push --yes",
-    "bump-canary": "yarn run new-canary-version prerelease",
-    "new-canary-version": "GITHUB_SHA=$(git rev-parse HEAD | cut -c1-8);lerna version --force-publish=* --preid canary",
-    "new-release-version": "lerna version --force-publish=*",
-    "new-dev-canary-version": "GITHUB_SHA=$(git rev-parse HEAD | cut -c1-8);lerna version --force-publish=* --preid dev",
-    "ga-npm-publish": "lerna publish from-git  --force-publish=* --yes",
+    "release-dev": "wsrun -p 'rooks' -s --report",
     "ts": "rimraf packages/*/*.tsbuildinfo && rimraf packages/*/lib/*.d.ts && tsc -b @package-name-list.txt"
   },
   "optionalDependencies": {
@@ -77,7 +71,6 @@
     "inquirer": "7.0.0",
     "jest": "^26.6.3",
     "jest-localstorage-mock": "^2.4.3",
-    "lerna": "^3.13.2",
     "lint-staged": "^10.2.12",
     "lodash.capitalize": "4.2.1",
     "lodash.truncate": "^4.4.2",
