chore(set registry manually): set registry manually

--- a/packages/rooks/package.json
+++ b/packages/rooks/package.json
@@ -26,7 +26,8 @@
     "url": "https://github.com/imbhargav5/rooks/issues"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   },
   "keywords": [
     "use",
