--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "commit": "cz",
     "lint": "eslint src/**/*.ts",
     "format": "yarn run prettier --write \"./packages/shared/*.+(js|jsx|ts|tsx)\"",
-    "test": "wsrun --exclude-missing -p 'shared' --report -s test",
+    "test": "jest src/__tests__",
     "coverage": "yarn test --coverage",
     "create": "node helpers/create",
     "delete-tsconfig": "wsrun -p '@rooks/*' -s --report rm tsconfig.json",
@@ -30,7 +30,7 @@
     "release-dev": "wsrun -p 'rooks' -s --report release-dev",
     "test-who": "npm whoami",
     "ts": "rimraf packages/*/*.tsbuildinfo && rimraf packages/*/lib/*.d.ts && tsc -b @package-name-list.txt",
-    "build-rooks": "node esbuild.mjs",
+    "build-rooks": "node esbuild.mjs && yarn generate-types",
     "generate-types": "tsc --outDir dist/lib --emitDeclarationOnly --declarationDir dist/types --declaration true && rollup -c dts.rollup.config.js"
   },
   "optionalDependencies": {
@@ -55,6 +55,7 @@
     "@rollup/plugin-typescript": "^6.1.0",
     "@testing-library/react": "^11.2.1",
     "@testing-library/react-hooks": "^3.4.2",
+    "@types/jest": "^26.0.22",
     "@types/react": "*",
     "@types/react-dom": "*",
     "assert": "^2.0.0",
@@ -116,7 +117,8 @@
     "rollup-plugin-typescript2": "^0.29.0",
     "shelljs": "0.8.3",
     "terser": "^5.6.1",
-    "ts-jest": "^26.4.4",
+    "ts-jest": "^26.5.5",
+    "ts-node": "^9.1.1",
     "tslib": "^2.0.3",
     "typescript": "^4.0.5",
     "unist-util-find": "^1.0.2",
