--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
     "skipLibCheck": true
     //"strict": true,
   },
-  "exclude": ["node_modules"],
-  "include": ["src"]
+  "exclude": ["node_modules", "./dist/**/*", "./lib/**/*", "./docs/**/*"],
+  "include": ["./src/**/*.ts", "jest.config.ts"]
 }
