--- a/package.json
+++ b/package.json
@@ -7,30 +7,22 @@
   "module": "lib/rooks.esm.js",
   "types": "lib/types/index.d.ts",
   "scripts": {
-    "clean": "wsrun  --exclude-missing clean",
-    "cleanup": "wsrun -p '@rooks/*' -s --report --exclude-missing clean rimraf lib dist",
+    "clean": "rimraf dist lib",
     "commit": "cz",
     "lint": "eslint src/**/*.ts",
     "format": "yarn run prettier --write \"./packages/shared/*.+(js|jsx|ts|tsx)\"",
     "test": "jest src/__tests__",
     "coverage": "yarn test --coverage",
     "create": "node helpers/create",
-    "delete-tsconfig": "wsrun -p '@rooks/*' -s --report rm tsconfig.json",
-    "add-license-to-pkg": "wsrun -p '@rooks/*' -s --report 'node ../../helpers/add-license-to-pkg.js'",
-    "toggle-pkg-privacy": "wsrun -p '@rooks/*' -s --report 'node ../../helpers/toggle-pkg-privacy.js'",
     "compute-package-list": "node helpers/compute-package-list",
     "update-title-card": "wsrun -p '@rooks/*' -s --report 'node ../../helpers/update-title-card/index.js'",
     "readme-to-docs": "wsrun -p '@rooks/*' -p 'rooks' -s --report 'node ../../helpers/docs/index.js'",
-    "build:rooks": "wsrun -p 'rooks' -s --report build",
     "build:docs": "wsrun -p 'docusaurus' -s --report build",
     "build:custom-github-actions": "cd ./.github/actions && for d in ./*/ ; do (cd \"$d\" && npm install && npm run build); done",
-    "build:only": "yarn run build:rooks",
-    "build": "yarn run build:only",
+    "build": "yarn build:rooks && yarn generate-types",
     "generate:changelog": "gulp changelog",
     "release-dev": "wsrun -p 'rooks' -s --report release-dev",
-    "test-who": "npm whoami",
-    "ts": "rimraf packages/*/*.tsbuildinfo && rimraf packages/*/lib/*.d.ts && tsc -b @package-name-list.txt",
-    "build-rooks": "node esbuild.mjs && yarn generate-types",
+    "build:rooks": "node esbuild.mjs",
     "generate-types": "tsc --outDir dist/lib --emitDeclarationOnly --declarationDir dist/types --declaration true && rollup -c dts.rollup.config.js"
   },
   "optionalDependencies": {
