--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-testing-library": "^4.1.0",
     "execa": "^4.1.0",
+    "fs-extra": "^9.1.0",
     "glob": "^7.1.6",
     "gulp": "^4.0.2",
     "gulp-conventional-changelog": "^2.0.35",
