--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "root",
+  "name": "rooks",
   "version": "4.11.0-0",
   "description": "Useful React hooks for everyone.",
   "main": "lib/rooks.js",
