--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -120,7 +120,8 @@ jobs:
         continue-on-error: true
         run: |
           git add .
+          git config push.default current
           git -c user.name="imbhargav5" -c user.email="imbhargav5@users.noreply.github.com" \
             commit -m "Update changelog [skip ci]" --no-verify --quiet
-          git pull "https://imbhargav5:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git" main --rebase
-          git push "https://imbhargav5:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git" main
+          git pull --rebase
+          git push
