--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -83,6 +83,7 @@ jobs:
 
       - name: 🚀 Release
         uses: cycjimmy/semantic-release-action@v2
+        id: semantic-release
         with:
           semantic_version: 17
           branches: |
@@ -97,39 +98,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-  changelog:
-    needs: release
-    runs-on: ubuntu-latest
-    if: ${{ github.repository == 'imbhargav5/rooks' &&
-      contains('refs/heads/main,refs/heads/beta,refs/heads/next,refs/heads/next-major,refs/heads/alpha',
-      github.ref) && github.event_name == 'push' }}
-    steps:
-      - name: ⬇️ Checkout repo
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - name: ⎔ Setup node
-        uses: actions/setup-node@v1
-        with:
-          node-version: 14
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - uses: actions/cache@v2
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-        with:
-          path: |
-            node_modules
-            */*/node_modules
-          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
-      - name: Install project dependencies
-        if: steps.yarn-cache.outputs.cache-hit != 'true' # Over here!
-        run: yarn
       - name: generate changelog
+        if: steps.semantic-release.outputs.new_release_published == 'true'
         run: yarn generate:changelog
       - name: Commit changelog
         continue-on-error: true
+        if: steps.semantic-release.outputs.new_release_published == 'true'
         run: |
           git add .
           git config push.default current
