--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rooks",
-  "version": "4.11.0",
+  "version": "5.0.0-alpha.8",
   "description": "Useful React hooks for everyone.",
   "main": "lib/rooks.js",
   "jsnext:main": "lib/rooks.esm.js",
@@ -51,7 +51,6 @@
     "@docusaurus/preset-classic": "^2.0.0-alpha.69",
     "@widgetbot/embed-api": "^1.1.3",
     "@widgetbot/react-embed": "^1.3.0",
-    
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-json": "^4.1.0",
