chore(create): modify create script

--- a/template/index.spec.template
+++ b/template/index.spec.template
@@ -2,7 +2,8 @@
  * @jest-environment jsdom
  */
 import React from "react";
-import %name% from "..";
+import { %name%  } from '../hooks/%name% ';
+
 
 describe("%name%", () => {
   it("should be defined", () => {
