--- a/package.json
+++ b/package.json
@@ -50,8 +50,6 @@
     "@babel/preset-react": "7.0.0",
     "@docusaurus/core": "^2.0.0-alpha.69",
     "@docusaurus/preset-classic": "^2.0.0-alpha.69",
-    "@widgetbot/embed-api": "^1.1.3",
-    "@widgetbot/react-embed": "^1.3.0",
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-json": "^4.1.0",
@@ -65,6 +63,8 @@
     "@types/jest": "^26.0.22",
     "@types/react": "*",
     "@types/react-dom": "*",
+    "@widgetbot/embed-api": "^1.1.3",
+    "@widgetbot/react-embed": "^1.3.0",
     "assert": "^2.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^26.6.3",
@@ -94,6 +94,7 @@
     "jest-localstorage-mock": "^2.4.3",
     "lint-staged": "^10.2.12",
     "lodash.capitalize": "4.2.1",
+    "lodash.sortby": "^4.7.0",
     "lodash.truncate": "^4.4.2",
     "make-dir": "1.3.0",
     "mdast-normalize-headings": "^2.0.0",
