--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -28,5 +28,7 @@ jobs:
       - name: Install project dependencies
         if: steps.yarn-cache.outputs.cache-hit != 'true' # Over here!
         run: yarn
+      - name: build
+        run: yarn build
       - name: test
         run: yarn test
