--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "mini-css-extract-plugin": "0.8.0",
     "np": "^7.4.0",
     "ora": "4.0.3",
+    "pkg-dir": "^5.0.0",
     "prettier": "^2.2.1",
     "raf": "3.4.1",
     "react": "16.9.0",
