--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "@babel/plugin-proposal-export-default-from": "7.5.2",
     "@babel/preset-env": "7.12.11",
     "@babel/preset-react": "7.0.0",
-    "@docusaurus/core": "^2.0.0-alpha.69",
-    "@docusaurus/preset-classic": "^2.0.0-alpha.69",
+    "@docusaurus/core": "^2.0.0-alpha.75",
+    "@docusaurus/preset-classic": "^2.0.0-alpha.75",
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-json": "^4.1.0",
@@ -61,8 +61,8 @@
     "@testing-library/react": "^11.2.1",
     "@testing-library/react-hooks": "^5.1.2",
     "@types/jest": "^26.0.22",
-    "@types/react": "*",
-    "@types/react-dom": "*",
+    "@types/react": "^17.0.4",
+    "@types/react-dom": "^17.0.3",
     "@widgetbot/embed-api": "^1.1.3",
     "@widgetbot/react-embed": "^1.3.0",
     "assert": "^2.0.0",
@@ -110,8 +110,8 @@
     "pkg-dir": "^5.0.0",
     "prettier": "^2.2.1",
     "raf": "3.4.1",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-test-renderer": "16.13.0",
     "read-pkg-up": "7.0.0",
     "readline-sync": "^1.4.10",
