fix(maintypes): fix maintypes for package.json

--- a/package.json
+++ b/package.json
@@ -2,24 +2,28 @@
   "name": "rooks",
   "version": "5.0.0",
   "description": "Useful React hooks for everyone.",
-  "main": "lib/rooks.js",
-  "module": "lib/rooks.esm.js",
-  "unpkg": "lib/rooks.umd.js",
-  "types": "lib/types/index.d.ts",
-  "typings": "lib/types/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "unpkg": "dist/umd/rooks.umd.js",
+  "types": "dist/cjs/types/index.d.ts",
+  "typings": "dist/cjs/types/index.d.ts",
   "sideEffects": false,
   "scripts": {
     "clean": "rimraf dist lib",
     "commit": "cz",
     "lint": "eslint src/**/*.ts",
     "format": "yarn run prettier --write \"./packages/shared/*.+(js|jsx|ts|tsx)\"",
-    "test": "jest src/__tests__",
+    "test": "jest",
     "coverage": "yarn test --coverage",
     "create": "node helpers/create",
     "new": "yarn run create",
+    "prebuild":"rimraf dist",
     "compute-package-list": "node helpers/compute-package-list",
     "build:custom-github-actions": "cd ./.github/actions && for d in ./*/ ; do (cd \"$d\" && npm install && npm run build); done",
-    "build": "yarn build:rooks && yarn generate-types",
+    "build:esm": "tsc -m esNext --outDir dist/esm",
+    "build:cjs": "tsc -m commonjs --outDir dist/cjs",
+    "build:umd": "rollup -c rollup.config.js",
+    "build": "yarn build:esm && yarn build:cjs && yarn build:umd",
     "generate:changelog": "gulp changelog",
     "release-dev": "np prerelease --tag=dev",
     "build:rooks": "node esbuild.mjs",
@@ -41,7 +45,8 @@
     "fsevents": "1.2.9"
   },
   "dependencies": {
-    "lodash.debounce": "^4.0.8"
+    "lodash.debounce": "^4.0.8",
+    "raf": "^3.4.1"
   },
   "devDependencies": {
     "@babel/cli": "7.5.5",
@@ -111,7 +116,6 @@
     "ora": "4.0.3",
     "pkg-dir": "^5.0.0",
     "prettier": "^2.2.1",
-    "raf": "3.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-test-renderer": "16.13.0",
