--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,11 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "strictNullChecks": true, // enable strict null checks as a best practice
-    "module": "ESNEXT", // specify module code generation
+    "module": "ES2015", // specify module code generation
     "jsx": "react", // use typescript to transpile jsx to js
-    "target": "ES2016", // specify ECMAScript target version
+    "target": "ES5", // specify ECMAScript target version
     "composite": true,
+    "pretty": true,
     "esModuleInterop": true,
     "baseUrl": "src",
     "allowJs": true,
@@ -21,9 +22,22 @@
       "@/*": ["*"]
     },
     "resolveJsonModule": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "rootDir": "src"
     //"strict": true,
   },
-  "exclude": ["node_modules", "./dist/**/*", "./lib/**/*", "meta/**/*"],
-  "include": ["./src/**/*.ts", "jest.config.ts", "./helpers/**/*.ts"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "build",
+    "scripts",
+    "helpers",
+    "docs",
+    "versioned_docs",
+    "versioned_sidebars",
+    "src/pages",
+    "src/css",
+    "src/theme"
+  ],
+  "include": ["./src/**/*.ts"]
 }
