fix(typings): build typings with rollup

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "unpkg": "dist/umd/rooks.umd.js",
-  "types": "dist/esm/index.d.ts",
-  "typings": "dist/esm/index.d.ts",
+  "types": "dist/types/index.d.ts",
+  "typings": "dist/types/index.d.ts",
   "sideEffects": false,
   "scripts": {
     "clean": "rimraf dist lib",
@@ -23,11 +23,10 @@
     "build:esm": "tsc -m esNext --outDir dist/esm",
     "build:cjs": "tsc -m commonjs --outDir dist/cjs",
     "build:umd": "rollup -c rollup.config.js",
-    "build": "yarn build:esm && yarn build:cjs && yarn build:umd",
+    "build:types":"rollup -c dts.rollup.config.js",
+    "build": "yarn build:esm && yarn build:cjs && yarn build:umd && yarn build:types",
     "generate:changelog": "gulp changelog",
     "release-dev": "np prerelease --tag=dev",
-    "build:rooks": "node esbuild.mjs",
-    "generate-types": "tsc --outDir dist/lib --emitDeclarationOnly --declarationDir dist/types --declaration true && rollup -c dts.rollup.config.js",
     "docs:examples": "docusaurus-examples",
     "docs:start": "docusaurus start",
     "docs:build": "docusaurus build",
