--- a/package.json
+++ b/package.json
@@ -2,26 +2,31 @@
   "name": "rooks",
   "version": "5.0.0",
   "description": "Useful React hooks for everyone.",
-  "main": "lib/rooks.js",
-  "jsnext:main": "lib/rooks.esm.js",
-  "module": "lib/rooks.esm.js",
-  "types": "lib/types/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "unpkg": "dist/umd/rooks.umd.js",
+  "types": "dist/types/index.d.ts",
+  "typings": "dist/types/index.d.ts",
+  "sideEffects": false,
   "scripts": {
     "clean": "rimraf dist lib",
     "commit": "cz",
     "lint": "eslint src/**/*.ts",
     "format": "yarn run prettier --write \"./packages/shared/*.+(js|jsx|ts|tsx)\"",
-    "test": "jest src/__tests__",
+    "test": "jest",
     "coverage": "yarn test --coverage",
     "create": "node helpers/create",
     "new": "yarn run create",
+    "prebuild":"rimraf dist",
     "compute-package-list": "node helpers/compute-package-list",
     "build:custom-github-actions": "cd ./.github/actions && for d in ./*/ ; do (cd \"$d\" && npm install && npm run build); done",
-    "build": "yarn build:rooks && yarn generate-types",
+    "build:esm": "tsc -m esNext --outDir dist/esm",
+    "build:cjs": "tsc -m commonjs --outDir dist/cjs",
+    "build:umd": "rollup -c rollup.config.js",
+    "build:types":"rollup -c dts.rollup.config.js",
+    "build": "yarn build:esm && yarn build:cjs && yarn build:umd && yarn build:types",
     "generate:changelog": "gulp changelog",
     "release-dev": "np prerelease --tag=dev",
-    "build:rooks": "node esbuild.mjs",
-    "generate-types": "tsc --outDir dist/lib --emitDeclarationOnly --declarationDir dist/types --declaration true && rollup -c dts.rollup.config.js",
     "docs:examples": "docusaurus-examples",
     "docs:start": "docusaurus start",
     "docs:build": "docusaurus build",
@@ -39,7 +44,8 @@
     "fsevents": "1.2.9"
   },
   "dependencies": {
-    "lodash.debounce": "^4.0.8"
+    "lodash.debounce": "^4.0.8",
+    "raf": "^3.4.1"
   },
   "devDependencies": {
     "@babel/cli": "7.5.5",
@@ -48,8 +54,8 @@
     "@babel/plugin-proposal-export-default-from": "7.5.2",
     "@babel/preset-env": "7.12.11",
     "@babel/preset-react": "7.0.0",
-    "@docusaurus/core": "^2.0.0-alpha.69",
-    "@docusaurus/preset-classic": "^2.0.0-alpha.69",
+    "@docusaurus/core": "^2.0.0-alpha.75",
+    "@docusaurus/preset-classic": "^2.0.0-alpha.75",
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-json": "^4.1.0",
@@ -61,8 +67,8 @@
     "@testing-library/react": "^11.2.1",
     "@testing-library/react-hooks": "^5.1.2",
     "@types/jest": "^26.0.22",
-    "@types/react": "*",
-    "@types/react-dom": "*",
+    "@types/react": "^17.0.4",
+    "@types/react-dom": "^17.0.3",
     "@widgetbot/embed-api": "^1.1.3",
     "@widgetbot/react-embed": "^1.3.0",
     "assert": "^2.0.0",
@@ -109,9 +115,8 @@
     "ora": "4.0.3",
     "pkg-dir": "^5.0.0",
     "prettier": "^2.2.1",
-    "raf": "3.4.1",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-test-renderer": "16.13.0",
     "read-pkg-up": "7.0.0",
     "readline-sync": "^1.4.10",
