feat(usedimensionsref): new hook to find dimensions of an element (#509)
* feat(usedimensionsref): new hook to find dimensions of an element

Easily grab dimensions of an element with a ref using this hook

fix #508

* fix(usedimensionsref): update types

* test(usedimensionsref): add basic test case

* test(usedimensionsref): add test and DOMRect polyfill

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "experimentalDecorators": true,
     "moduleResolution": "node",
     "strictNullChecks": true, // enable strict null checks as a best practice
     "module": "ES2015", // specify module code generation
@@ -39,5 +40,5 @@
     "src/css",
     "src/theme"
   ],
-  "include": ["./src/**/*.ts"]
+  "include": ["./src/**/*.ts", "src/__tests__/useDimensionsRef.spec.tsx"]
 }
