--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
   "typings": "dist/types/index.d.ts",
   "sideEffects": false,
   "license": "MIT",
-  "files": [
-    "dist/"
-  ],
   "scripts": {
     "clean": "rimraf dist lib",
     "commit": "cz",
@@ -85,7 +82,7 @@
     "clsx": "^1.1.1",
     "conventional-changelog-cli": "^2.1.1",
     "cz-conventional-changelog": "3.3.0",
-    "esbuild": "^0.11.12",
+    "esbuild": "^0.12.15",
     "eslint": "^7.24.0",
     "eslint-config-canonical": "^25.9.1",
     "eslint-config-prettier": "^8.2.0",
@@ -119,7 +116,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-test-renderer": "16.13.0",
-    "read-pkg-up": "7.0.0",
+    "read-pkg-up": "8.0.0",
     "readline-sync": "^1.4.10",
     "remark": "^13.0.0",
     "remark-behead": "^2.3.3",
@@ -137,8 +134,8 @@
     "terser": "^5.6.1",
     "ts-jest": "^26.5.5",
     "ts-node": "^9.1.1",
-    "tslib": "^2.0.3",
-    "typescript": "^4.0.5",
+    "tslib": "^2.3.0",
+    "typescript": "^4.3.5",
     "unist-util-find": "^1.0.2",
     "unist-util-find-all-after": "^3.0.2",
     "unist-util-find-all-before": "^3.0.1",
@@ -150,6 +147,10 @@
     "write-pkg": "3.2.0",
     "wsrun": "^5.2.4",
     "yargs": "^16.2.0"
+  },
+  "peerDependencies": {
+    "react": "^16.8.0  || ^17.0.0",
+    "react-dom": "^16.8.0  || ^17.0.0"
   },
   "husky": {
     "hooks": {
