--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "new": "yarn run create",
     "prebuild": "rimraf dist",
     "update-package-list-to-markdown": "node helpers/update-package-list-to-markdown",
+    "update-docusaurus-sidebars": "node helpers/update-docusaurus-sidebars",
+    "update-docs-and-sidebars": "yarn update-package-list-to-markdown && yarn update-docusaurus-sidebars",
     "build:custom-github-actions": "cd ./.github/actions && for d in ./*/ ; do (cd \"$d\" && npm install && npm run build); done",
     "build:esm": "tsc -m esNext --outDir dist/esm",
     "build:cjs": "tsc -m commonjs --outDir dist/cjs",
