fix(keywords): add keywords to package.json (#521)

--- a/package.json
+++ b/package.json
@@ -166,5 +166,13 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
-  }
+  },
+  "keywords": [
+    "react",
+    "hooks",
+    "custom",
+    "custom-hooks",
+    "typescript",
+    "react-hooks"
+  ]
 }
