ci(codecov): add Codecov integration and prep for badge (#541)
* ci(codecov): add Codecov integration and prep for badge

* chore(badges): update badges

* chore(badges): add badges

--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -48,7 +48,9 @@ jobs:
         if: steps.yarn-cache.outputs.cache-hit != 'true' # Over here!
         run: yarn
       - name: test
-        run: yarn test
+        run: yarn test --coverage
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v2
 
   release:
     env:
