--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "typings": "dist/types/index.d.ts",
   "sideEffects": false,
   "license": "MIT",
+  "devEngines": {
+    "node": "^12.17.0 || 13.x || 14.x || 15.x || 16.x"
+  },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=10"
   },
   "homepage": "https://react-hooks.org",
   "repository": {
