--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
     "format": "yarn run prettier --write \"./src/*.+(js|jsx|ts|tsx)\" && yarn run prettier --write \"./docs/*.+(md|mdxx)\"",
     "test": "jest",
     "coverage": "yarn test --coverage",
-    "create": "node helpers/create",
+    "create": "ts-node helpers/create",
     "new": "yarn run create",
     "prebuild": "rimraf dist",
-    "update-package-list-to-markdown": "node helpers/update-package-list-to-markdown",
-    "update-docusaurus-sidebars": "node helpers/update-docusaurus-sidebars",
+    "update-package-list-to-markdown": "ts-node helpers/update-package-list-to-markdown",
+    "update-docusaurus-sidebars": "ts-node helpers/update-docusaurus-sidebars",
     "update-docs-and-sidebars": "yarn update-package-list-to-markdown && yarn update-docusaurus-sidebars",
     "build:custom-github-actions": "cd ./.github/actions && for d in ./*/ ; do (cd \"$d\" && npm install && npm run build); done",
     "build:esm": "tsc -m esNext --outDir dist/esm",
     "build:cjs": "tsc -m commonjs --outDir dist/cjs",
-    "build:umd": "rollup -c rollup.config.js",
+    "build:umd": "rollup -c rollup.config.ts --configPlugin typescript",
     "build:types": "rollup -c dts.rollup.config.js",
     "build": "yarn build:esm && yarn build:cjs && yarn build:umd && yarn build:types",
     "generate:changelog": "gulp changelog",
