--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "strictNullChecks": true, // enable strict null checks as a best practice
-    "module": "ES2015", // specify module code generation
+    "module": "commonjs", // specify module code generation
     "jsx": "react", // use typescript to transpile jsx to js
     "target": "ES5", // specify ECMAScript target version
     "composite": true,
@@ -32,7 +32,6 @@
     "dist",
     "build",
     "scripts",
-    "helpers",
     "docs",
     "versioned_docs",
     "versioned_sidebars",
