--- a/package.json
+++ b/package.json
@@ -53,7 +53,11 @@
     "docs:deploy": "docusaurus deploy",
     "docs:swizzle": "docusaurus swizzle",
     "docs:docusaurus": "docusaurus",
-    "docs:serve": "docusaurus serve"
+    "docs:serve": "docusaurus serve",
+    "contributors:add": "all-contributors add",
+    "contributors:generate": "all-contributors generate",
+    "contributors:check": "all-contributors check",
+    "contributors:update": "ts-node helpers/update-all-contributors"
   },
   "dependencies": {
     "lodash.debounce": "^4.0.8",
@@ -84,6 +88,7 @@
     "@types/react-dom": "^17.0.3",
     "@widgetbot/embed-api": "^1.1.3",
     "@widgetbot/react-embed": "^1.3.0",
+    "all-contributors-cli": "^6.20.0",
     "assert": "^2.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^26.6.3",
