chore(contributors): automate readme contributors list update (#555)

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -4,7 +4,8 @@
   "repoType": "github",
   "repoHost": "https://github.com",
   "files": [
-    "src/pages/_CONTRIBUTORS.md"
+    "src/pages/_CONTRIBUTORS.md",
+    "README.md"
   ],
   "imageSize": 100,
   "commit": false,
