--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -345,6 +345,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "mar1u50",
+      "name": "mar1u50",
+      "avatar_url": "https://avatars.githubusercontent.com/u/17710919?v=4",
+      "profile": "https://github.com/mar1u50",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
