--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -372,6 +372,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "krijoh92",
+      "name": "Kristinn Thor Johannsson",
+      "avatar_url": "https://avatars.githubusercontent.com/u/1156014?v=4",
+      "profile": "https://github.com/krijoh92",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
