--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@testing-library/react": "^11.2.1",
     "@testing-library/react-hooks": "^5.1.2",
     "@types/jest": "^26.0.22",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "@widgetbot/embed-api": "^1.1.3",
